--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controller\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
